@@ -1,5 +1,6 @@
 Release 0.9.9 (not yet)
 
+- Issue 139: Enforce size limits for indexed text/blob properties.
 - Issue 158: Support GenericProperty(compressed=True).
 - Issue 156: Changed query cache policy (again).
 - Issue 162: Raise an error on attempting to create a nested transaction.
